# simple_video_speed_changer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main_window.hpp  video_speed_changer_widget.cpp  video_speed_changer_widget.h
